--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>7omr.GitHub.io by 7omr</title>
+    <title>7omr Homepage</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>7omr.GitHub.io</h1>
+        <h1>7omr Homepage</h1>
         <p>Created to set up a GitHub page.</p>
 
 
