--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>7omr Homepage</h1>
-        <p>Created to set up a GitHub page.</p>
+        <p>Created to set up a GitHub page</p>
 
 
         <p class="view"><a href="https://github.com/7omr">View My GitHub Profile</a></p>
