--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>This is where I will put my contact info.  For now, here's a link to the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a></p>
+<p>This is where I will put my contact info.  For now, here's a link to GitHub documentation: <a href="https://help.github.com/pages">https://help.github.com/pages</a></p>
       
   </body>
 </html>
